[project]
name = "agentic-ai-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.1",
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.7",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-cli[inmem]>=0.4.30",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "mermaid-py>=0.8.4",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "wikipedia>=1.4.0",
]
